# duilio-code-studio

./: .gitignore  ADVANCED_FEATURES_SUMMARY.md  ANALYSIS_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  CODEBASE_ANALYSIS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_IMPROVEMENTS_VALIDATION.md  COMPLETE_PROJECT_TESTS.md  COMPREHENSIVE_TEST_ANALYSIS.md  CONTRIBUTING.md  CURSOR_REFERENCE_TODO.md  EXECUTIVE_SUMMARY.md  FINAL_COMPLETE_VALIDATION.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TODO_EXTENSIVE.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MARKET_ANALYSIS_AND_OPTIMIZATION_PLAN.md  NEXT_STEPS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_IMPLEMENTATION_STATUS.md  OPTIMIZATION_PLAN.md  QUALITY_REPORT.md  README.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  SECURITY.md  SECURITY_AUDIT.md  SQL_IMPROVEMENTS_STATUS.md  TECHNICAL_REPORT_AI_IDES.md  TEST_PROJECT_WEB.md  TEST_PROMPTS_VALIDATION.md  (+21 more)
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
assets/: README.md
config/: __init__.py  settings.py
docs/: COMO-ACESSAR.md  COMO-LER.md  README.md
docs/en/: 00-index.md  01-introduction.md  (+11 more)
examples/: quick_start.py
scripts/: download_models.py  install.sh  start.sh
src/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_api.py
web/: index.html
(+145 files in other folders)
